@@ -2,7 +2,7 @@ Package: CALIBERdatamanage
 Title: Data Management Tools for CALIBER Datasets
 Type: Package
 Version: 0.1-14
-Date: 2018-01-31
+Date: 2018-10-22
 Authors@R: c(person("Anoop", "Shah", role=c("aut", "cre"), email="anoop@doctors.org.uk"),
     person("Harry", "Hemingway", role="ths"),
     person("Aroon", "Hingorani", role="ths"),
