@@ -16,7 +16,7 @@ Tools for handling data in the GPRD, HES, ONS and MINAP linked dataset (CALIBER)
 Package: \tab CALIBERdatamanage\cr
 Type: \tab Package\cr
 Version: \tab 0.1-14\cr
-Date: \tab 2018-01-31\cr
+Date: \tab 2018-10-22\cr
 License: \tab GPL-3\cr
 }
 
